[package]
name = "type_jack"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = "4.5.46"
serde = { version = "1.0.219", features = ["derive"] }
swc_common = "14.0.3"
swc_ecma_ast = "15.0.0"
swc_ecma_codegen = "17.0.0"
swc_ecma_parser = "23.0.0"
swc_ecma_transforms_typescript = "28.0.0"
swc_ecma_visit = "15.0.0"
toml = "0.9.5"
