[package]
name = "type_jack"
version = "0.0.2"
edition = "2024"

[profile.dev]
debug = true

[profile.test]
debug = true

[profile.release]
debug = false


[dependencies]
anyhow = "1.0.99"
clap = "4.5.46"
serde = { version = "1.0.219", features = ["derive"] }
swc_common = { version = "14.0.4", features = ["tty-emitter"] }
swc_ecma_ast = "15.0.0"
swc_ecma_codegen = "17.0.0"
swc_ecma_parser = "23.0.0"
swc_ecma_transforms_typescript = "28.0.0"
toml = "0.9.5"
nu-ansi-term = "0.50.1"
swc_ecma_transforms_base = "26.0.1"
